# telemetry-lab

./: .gitignore  README.md
.github/workflows/: build-c.yml  build-composites.yml  build-cpp.yml  build-go.yml  build-rust.yml  build-tap.yml  build-tmon-windows.yml  build-tmon.yml  lab-environment.yml  probe-windows-cpp.yml  probe-windows-go.yml  probe-windows.yml  release.yml  tests.yml
lab-environment/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
lab-environment/docker/: substrate-base.Dockerfile
lab-environment/lib/: lab-environment-stack.ts
lab-environment/scripts/: inventory-linux.sh  inventory-windows.ps1  inventory.sh  validate-linux.sh  validate-windows.ps1
lab-environment/test/: lab-environment.test.ts
poc/linux-monitor/: .gitignore  Makefile  README.md  monitor.bpf.c  monitor.c  spawner.c
poc/windows-monitor/: Program.cs  README.md  monitor.csproj
scripts/: assemble-release.sh  release-README.txt
tap/: .gitignore  README.md  go.mod
tap/testdata/: linux_dropped.jsonl  linux_empty_glibc.jsonl  linux_empty_musl.jsonl  linux_read.jsonl  linux_read_musl.jsonl  windows_empty_ucrt.jsonl  windows_read.jsonl
tmon-linux/: .gitignore  CMakeLists.txt  README.md
tmon-linux/bpf/: tmon.bpf.c  tmon_event.h
tmon-linux/cli/: main.cpp
tmon-linux/cmake/: gen_errno.sh  gen_syscalls.sh
tmon-linux/examples/: specimen.c
tmon-linux/src/core/: arg_decode.cpp  arg_decode.hpp  engine.cpp  engine.hpp  errno_names.cpp  errno_names.hpp  event_decode.cpp  event_decode.hpp  event_sink.hpp  meta_parse.cpp  meta_parse.hpp  syscall_meta.h  syscall_names.cpp  syscall_names.hpp
tmon-linux/src/model/: config.hpp  event.hpp
tmon-linux/src/view/: human_formatter.cpp  human_formatter.hpp  json_formatter.cpp  json_formatter.hpp
tmon-linux/tests/: CMakeLists.txt  arg_decode_test.cpp  errno_names_test.cpp  event_decode_test.cpp  human_formatter_test.cpp  json_formatter_test.cpp  meta_parse_test.cpp  syscall_names_test.cpp
tmon-windows/: README.md
tools/: substrate.toml  verify_substrate.py
tools/substrate/: __init__.py  elf.py  facts.py  pe.py  rules.py  verify.py
ttp-composite/: README.md
ttp-composite/linux/c/: CMakeLists.txt
ttp-composite/linux/c/clear_log/: CMakeLists.txt  main.c
ttp-composite/linux/c/imds/: CMakeLists.txt  main.c
ttp-composite/linux/c/mkdir_bin/: CMakeLists.txt  main.c
ttp-composite/linux/c/ptrace_antidebug/: CMakeLists.txt  main.c
ttp-composite/linux/c/read_sensitive_file/: CMakeLists.txt  main.c
ttp-composite/linux/c/reverse_shell/: CMakeLists.txt  main.c
ttp-composite/linux/c/symlink_sensitive/: CMakeLists.txt  main.c
ttp-composite/linux/cpp/: CMakeLists.txt
ttp-composite/linux/cpp/clear_log/: CMakeLists.txt  main.cpp
ttp-composite/linux/cpp/imds/: CMakeLists.txt  main.cpp
ttp-composite/linux/cpp/mkdir_bin/: CMakeLists.txt  main.cpp
ttp-composite/linux/cpp/ptrace_antidebug/: CMakeLists.txt  main.cpp
ttp-composite/linux/cpp/read_sensitive_file/: CMakeLists.txt  main.cpp
ttp-composite/linux/cpp/reverse_shell/: CMakeLists.txt  main.cpp
ttp-composite/linux/cpp/symlink_sensitive/: CMakeLists.txt  main.cpp
ttp-composite/linux/cpp/toolchains/: linux-libcxx.cmake
ttp-composite/windows/c/: CMakeLists.txt
ttp-composite/windows/c/imds/: CMakeLists.txt  main.c
ttp-composite/windows/c/registry_run_key/: CMakeLists.txt  main.c
ttp-composite/windows/c/reverse_shell/: CMakeLists.txt  main.c
ttp-composite/windows/c/startup_folder/: CMakeLists.txt  main.c
ttp-composite/windows/cpp/: CMakeLists.txt
ttp-composite/windows/cpp/imds/: CMakeLists.txt  main.cpp
ttp-composite/windows/cpp/registry_run_key/: CMakeLists.txt  main.cpp
ttp-composite/windows/cpp/reverse_shell/: CMakeLists.txt  main.cpp
ttp-composite/windows/cpp/startup_folder/: CMakeLists.txt  main.cpp
ttp-composite/windows/cpp/toolchains/: windows-libcxx.cmake
ttp-primitives/c/: CMakeLists.txt
ttp-primitives/c/directory_enumeration/: CMakeLists.txt  main.c
ttp-primitives/c/dns_lookup/: CMakeLists.txt  main.c
ttp-primitives/c/empty/: CMakeLists.txt
ttp-primitives/c/file_io/: CMakeLists.txt  main.c
ttp-primitives/c/http_client/: CMakeLists.txt  main.c
ttp-primitives/c/memory_allocate/: CMakeLists.txt  main.c
ttp-primitives/c/pipe_ipc/: CMakeLists.txt  main.c
ttp-primitives/c/process_enumeration/: CMakeLists.txt  main.c
ttp-primitives/c/process_exec/: CMakeLists.txt  main.c
ttp-primitives/c/spawn/: CMakeLists.txt  main.c
ttp-primitives/c/tcp_client/: CMakeLists.txt  main.c
ttp-primitives/c/tcp_server/: CMakeLists.txt  main.c
ttp-primitives/c/tests/: CMakeLists.txt  pipe_ipc_test.cpp  tcp_server_test.cpp  thread_create_test.cpp
ttp-primitives/c/thread_create/: CMakeLists.txt  main.c
ttp-primitives/c/toolchains/: linux-glibc.cmake  linux-musl.cmake  windows-mingw.cmake  windows-msvc.cmake
ttp-primitives/cpp/: CMakeLists.txt
ttp-primitives/cpp/directory_enumeration/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/dns_lookup/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/empty/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/file_io/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/http_client/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/memory_allocate/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/pipe_ipc/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/process_enumeration/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/process_exec/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/spawn/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/tcp_client/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/tcp_server/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/tests/: CMakeLists.txt  directory_enumeration_test.cpp  dns_lookup_test.cpp  empty_test.cpp  file_io_test.cpp  http_client_test.cpp  memory_allocate_test.cpp  process_enumeration_test.cpp  process_exec_test.cpp  spawn_test.cpp  tcp_client_test.cpp
ttp-primitives/cpp/thread_create/: CMakeLists.txt  main.cpp
ttp-primitives/cpp/toolchains/: linux-libstdcxx.cmake  windows-libstdcxx.cmake
ttp-primitives/go/: .gitignore  go.mod
(+130 files in other folders)
